@@ -1,8 +1,8 @@
 plugins {
-    id "org.sonarqube" version "3.5.0.2730"
+    id "org.sonarqube" version "4.0.0.2929"
     id 'java'
-    id "uk.co.boothen.gradle.wsimport" version "0.17"
-    id 'org.springframework.boot' version "2.7.5"
+    id "uk.co.boothen.gradle.wsimport" version "0.18"
+    id 'org.springframework.boot' version "3.0.4"
     id 'io.spring.dependency-management' version "1.1.0"
 }
 
@@ -23,8 +23,9 @@ wsimport {
 }
 
 dependencyManagement {
+    applyMavenExclusions = false
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.5'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.1'
     }
 }
 
@@ -36,6 +37,7 @@ java.sourceCompatibility = JavaVersion.VERSION_17
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
 repositories {
@@ -52,6 +54,8 @@ repositories {
 }
 dependencies {
 
+    implementation platform('org.testcontainers:testcontainers-bom:1.17.6')
+
     implementation 'no.nav.testnav.libs:servlet-core'
     implementation 'no.nav.testnav.libs:servlet-security'
     implementation 'no.nav.testnav.libs:database'
@@ -59,36 +63,31 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
     implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config
 
-    implementation 'com.sun.xml.messaging.saaj:saaj-impl:1.5.1'
-    implementation 'javax.xml.soap:javax.xml.soap-api:1.4.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
+
+    implementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.0'
+    implementation 'jakarta.xml.soap:jakarta.xml.soap-api:3.0.0'
     implementation 'org.springframework.ws:spring-ws-security'
 
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'com.zaxxer:HikariCP'
     implementation 'org.postgresql:postgresql'
-    implementation 'com.h2database:h2'
+    implementation 'org.flywaydb:flyway-core'
 
-    implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'ma.glasnost.orika:orika-core:1.5.4'
 
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
     implementation 'org.hibernate.validator:hibernate-validator'
+    implementation 'net.java.dev.jna:jna:5.13.0'
 
-    implementation 'wsdl4j:wsdl4j:1.6.3'
-
-    testImplementation 'javax.inject:javax.inject:1'
     testImplementation 'com.h2database:h2'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
     testImplementation 'junit:junit:4.13.2' //TODO upgrade to JUnit5
